--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -10,6 +10,9 @@
   </thead>
 
   <tbody>
+  
+
+  
     <% @homes.each do |home| %>
       <tr>
         <td><%= link_to 'Show', home %></td>
@@ -23,3 +26,4 @@
 <br>
 
 <%= link_to 'New Home', new_home_path %>
+<%= link_to 'list Product', product %>
