--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -27,3 +27,4 @@
 
 <%= link_to 'New Home', new_home_path %>
 <%= link_to 'View Products', "/products"  %>
+<%= link_to 'Add New Product', "/products/new"  %>
