--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -13,6 +13,7 @@
 <p>
   <strong>Image:</strong>
   <%= @product.image %>
+  <%= image_tag(@product.image_url, width: 600) if @product.image.present? %>
 </p>
 
 <%= link_to 'Edit', edit_product_path(@product) %> |
