--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -17,6 +17,7 @@
       <tr>
         <td><%= product.summary %></td>
         <td><%= product.description %></td>
+		<td><%= image_tag product.image_url, width: 50 if product.image.present? %></td>
         <td><%= product.image %></td>
         <td><%= link_to 'Show', product %></td>
         <td><%= link_to 'Edit', edit_product_path(product) %></td>
